A patch from Arpit Singh Pandya " Financial Account screen in accounting is not showing properly." (https://issues.apache.org/jira/browse/OFBIZ-3336) - OFBIZ-3336 When we visit following link in Business Time theme. https://localhost:8443/accounting/control/FinAccountMain
The list of Financial Accounts is shifted towards right.

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@890726 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bizznesstime/webapp/bizznesstime/css/style.css
+++ b/themes/bizznesstime/webapp/bizznesstime/css/style.css
@@ -1156,6 +1156,7 @@ div.endcolumns { /* deprecated - use .clear */
 }
 
 #column-container {
+    clear: right;
     margin:0 10px 0 0;
 }
 
